5-gitlab-ci.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ci-runner
  namespace: gitlab
  labels:
    app: gitlab-ci-runner
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-ci-runner
    spec:
      # These rules appear to tell kubernetes to schedule each pod on different nodes
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - gitlab-ci-runner
      volumes:
      - name: ci-runner-scripts
        projected:
          sources:
          - configMap:
              name: ci-runner-scripts
              items:
              - key: run.sh
                path: run.sh
                mode: 0755
      serviceAccountName: gitlab-ci
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        supplementalGroups: [999]
      containers:
        - image: gitlab/gitlab-runner:v11.3.1
          name: gitlab-ci-runner
          command:
            - /scripts/run.sh
          resources:
            limits:
              cpu: "500m"
              memory: "500Mi"
            requests:
              cpu: "500m"
              memory: "500Mi"
          ports:
          - containerPort: 9100
            name: http-metrics
            protocol: TCP
          volumeMounts:
          - name: ci-runner-scripts
            mountPath: "/scripts"
            readOnly: true
      restartPolicy: Always
---
