8-gitlab-ci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-runner
  namespace: gitlab
  labels:
    app: gitlab-ci-runner
spec:
  selector:
    matchLabels:
      app: gitlab-ci-runner
  replicas: 3
  template:
    metadata:
      labels:
        app: gitlab-ci-runner
    spec:
      # Don't run the gitlab ci runner on the gitlab node (it's resource hungry)
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: gitlab
                    operator: NotIn
                    values: ["true"]
      volumes:
      - name: ci-runner-scripts
        projected:
          sources:
          - configMap:
              name: ci-runner-scripts
              items:
              - key: run.sh
                path: run.sh
                mode: 0755
      serviceAccountName: gitlab-ci
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        supplementalGroups: [999]
      containers:
        - image: gitlab/gitlab-runner:v11.11.2
          name: gitlab-ci-runner
          command:
            - /scripts/run.sh
          ports:
          - containerPort: 9100
            name: http-metrics
            protocol: TCP
          volumeMounts:
          - name: ci-runner-scripts
            mountPath: "/scripts"
            readOnly: true
      restartPolicy: Always
