4-gitlab-redis.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gitlab-redis
  namespace: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-redis
    spec:
      containers:
        - name: redis
          image: sameersbn/redis:4.0.9-1
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            exec:
              command: ["redis-cli","ping"]
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["redis-cli","ping"]
            initialDelaySeconds: 5
            timeoutSeconds: 1
---

# -- Service for the Redis pod
apiVersion: v1
kind: Service
metadata:
  name: gitlab-redis
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
