5-gitlab-postgres.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: postgres
  namespace: gitlab
  labels:
    app: gitlab
spec:
  serviceName: postgres
  replicas: 1
  volumeClaimTemplates:
    - metadata:
        name: postgres
        namespace: gitlab
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
        selector:
          matchLabels:
            volume-name: gitlab-postgres
  template:
    metadata:
      labels:
        app: gitlab-postgres
    spec:
      nodeSelector:
        gitlab: "true"
      containers:
        - name: postgresql
          image: sameersbn/postgresql:10
          resources:
            limits:
              cpu: "250m"
              memory: "250Mi"
            requests:
              cpu: "250m"
              memory: "125Mi"
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["pg_isready","-h","localhost","-U","postgres"]
            initialDelaySeconds: 5
            timeoutSeconds: 1
---

# -- Service for the Ingress to target
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
