6-gitlab-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-redis
    spec:
      containers:
        - name: redis
          image: sameersbn/redis:4.0.9-1
          resources:
            limits:
              cpu: "250m"
              memory: "250Mi"
            requests:
              cpu: "250m"
              memory: "125Mi"
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["redis-cli","ping"]
            initialDelaySeconds: 5
            timeoutSeconds: 1
---

# -- Service for the Redis pod
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
