7-gitlab-registry.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab-registry
  serviceName: registry
  replicas: 1
  volumeClaimTemplates:
    - metadata:
        name: docker-registry
        namespace: gitlab
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 25Gi
        selector:
          matchLabels:
            volume-name: gitlab-docker-registry
  template:
    metadata:
      labels:
        app: gitlab-registry
    spec:
      nodeSelector:
        gitlab: "true"
      containers:
        - name: registry
          image: registry:latest
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
          ports:
            - name: registry
              containerPort: 5000
          volumeMounts:
            - name: docker-registry
              mountPath: /registry
            - name: registry-certs
              mountPath: /certs/registry
              readOnly: true
      volumes:
        - name: registry-certs 
          secret: 
            secretName: tls-gitlab
---

# -- Service for the Ingress to target
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab-registry
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
