4-gitlab-registry.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gitlab-registry
  namespace: gitlab
  labels:
    app: gitlab
spec:
  serviceName: gitlab-registry
  replicas: 1
  volumeClaimTemplates:
    - metadata:
        name: gitlab-docker-registry
        namespace: gitlab
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 25Gi
        selector:
          matchLabels:
            volume-name: gitlab-docker-registry
  template:
    metadata:
      labels:
        app: gitlab-registry
    spec:
      nodeSelector:
        gitlab: "true"
      containers:
        - name: registry
          image: registry:latest
          ports:
            - name: registry
              containerPort: 5000
          volumeMounts:
            - name: gitlab-docker-registry
              mountPath: /registry
            - name: certs
              mountPath: /certs
      volumes:
        - name: certs
          secret:
            secretName: tls-gitlab-antimatter-studios-com
---

# -- Service for the Ingress to target
apiVersion: v1
kind: Service
metadata:
  name: gitlab-registry
  namespace: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: registry
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
---

# -- Ingress configuration for Gitlab
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-registry
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 2000m
spec:
  tls:
  - secretName: tls-registry-gitlab-antimatter-studios-com
    hosts:
      - "registry.gitlab.antimatter-studios.com"
  rules:
  - host: registry.gitlab.antimatter-studios.com
    http:
      paths:
      - backend:
          serviceName: gitlab-registry
          servicePort: 5000
